objects/Job_Seeker__c.object
<CustomObject>
    <label>Job Seeker</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Seekers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Male__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Male</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FEMALE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FEMALE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>C+</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>html</fullName>
                </value>
                <value>
                    <fullName>css</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HYD</fullName>
                </value>
                <value>
                    <fullName>VIZAG</fullName>
                </value>
                <value>
                    <fullName>PUNE</fullName>
                </value>
                <value>
                    <fullName>BNG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1+</fullName>
                </value>
                <value>
                    <fullName>2+</fullName>
                </value>
                <value>
                    <fullName>3+</fullName>
                </value>
                <value>
                    <fullName>4+</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Addres__c</fullName>
        <label>Current Addres</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_jobforam__c</fullName>
        <label>Total jobforam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_of_passed_out__c</fullName>
        <label>Year of passed out</label>
        <type>Date</type>
    </fields>
    <validationRules>
        <fullName>Gender</fullName>
        <active>true</active>
        <errorConditionFormula>IF( FEMALE__c   &amp;&amp;  Male__c   ,true,false)</errorConditionFormula>
        <errorMessage>Please select male or female only</errorMessage>
    </validationRules>
</CustomObject>